BE layout bugfixes
git-svn-id: svn+ssh://localhost/var/svn/postcanal@464 59c7e291-545d-0410-9381-d2a3ada94e96

--- a/trunk/application/view/template/Feed/index.css
+++ b/trunk/application/view/template/Feed/index.css
@@ -128,3 +128,11 @@ button.feeddeleten
     font-size: 14pt;
     line-height: 40px;
 }
+#feedoptionsform
+{
+    text-align: left;
+}
+div.inputfeedoption
+{
+    line-height: 30px;
+}
